tests/neg/i9292.scala
trait I0[-I1] {
def [@specialized(List[I2], i3 // error // error // error
val  // error
def i3(i4: Int } // error // error
